<resources>
    <string name="app_name">Prct005_InterfaceDoUtilizador</string>
    <string name="curso_android">Curso Android</string>
    <string name="masterd">MasterD</string>
    <string name="guardar">Guardar</string>
    <string name="opiniao">Tua opinião:</string>
    <string name="nome_2">Nome 2</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="nome_1">Nome 1</string>
</resources>
