<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#686868"
    android:gravity="center">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:mipmap/sym_def_app_icon"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textMasterD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masterd"
            android:textAlignment="center"
            android:layout_below="@+id/image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/curso_android"
            android:layout_below="@+id/textMasterD"
            android:textAlignment="center"/>

    </RelativeLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="105dp"
        android:stretchColumns="0">

        <TableRow
            android:id="@+id/TableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/nome_1"/>
            <TextView
                android:text="@string/_1"
                android:padding="7dp"/>
            <TextView
                android:text="@string/_2"
                android:padding="7dp"/>
            <TextView
                android:text="@string/_3"
                android:padding="7dp"/>

            <TextView
                android:text="@string/_4"
                android:padding="7dp"/>

        </TableRow>


        <TableRow
            android:id="@+id/TableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/nome_2"/>

            <TextView
                android:text="@string/_1"
                android:padding="7dp"/>

            <TextView
                android:text="@string/_2"
                android:padding="7dp"/>

            <TextView
                android:text="@string/_3"
                android:padding="7dp"/>

            <TextView
                android:text="@string/_4"
                android:padding="7dp"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:background="#686868"
            android:text="@string/opiniao"/>

        <EditText
            android:layout_width="290sp"
            android:layout_height="wrap_content"
            android:background="#980000"/>



    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"/>

</LinearLayout>